# cmake-starter-project

./: .gitignore  CMakeLists.txt  README.md  travis.yml
lib/: CMakeLists.txt
lib/benchmark/: dummy_benchmark.cpp
lib/include/: dummy.h
lib/src/: dummy.cpp
lib/test/: dummy_test.cpp
